correct whatsapp and telegram link, removed slogan to aim

--- a/fxgoat.html
+++ b/fxgoat.html
@@ -95,7 +95,7 @@
 	</div>
 
 	<div class="section3">
-		<h1 class="first-h1">Slogan: <span class="pips">Just for the PIPs</span></h1>
+		<h1 class="first-h1"> Aim: <em><span class="pips">Just for the PIPs</span></em></h1>
 		<p>True, indepenent reviews of our services and things to be learnt in the Forex Market  <br> from  <br> <a href="" class="fa fa-star"></a> <span class="trustp">FXGOAT Nigeria!</span></p>
 
 		<!-- bootstrap below -->
@@ -179,8 +179,8 @@
 
 		<div class="chat-div">
 			<h4>chat up Now!</h4>
-			<span class="whatsapp"><a href="" class="fa fa-whatsapp"></a></span>
-			<span class="telegram"><a href="" class="fa fa-telegram"></a></span>
+			<span class="whatsapp"><i href="" class="fa fa-whatsapp"></i></span>
+			<span class="telegram"><i href="" class="fa fa-telegram"></i></span>
 		</div>
 	</div>
 
