resolved whatsapp and telegram issue with space of body

--- a/fxgoat.html
+++ b/fxgoat.html
@@ -4,25 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="fxgoat.css">
 
-	<script>
-		function svg(){
-			var menu = document.querySelector('#menu');
+	<title>fxgoat</title>
 
-			if(menu.style.display ==='block'){
-				menu.style.display = 'none';
-			}
-			else {
-				menu.style.display = 'block';
-			}
-		}
-	</script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>fxgoat</title>
+
+	<link rel="stylesheet" type="text/css" href="fxgoat.css">
+
+
+	
 
 </head>
 <body>
@@ -47,10 +39,10 @@
 			<h5>Register & place your first deposit to get 25 USD trading bonus</h5>
 			<div class="open-view">
 				<div class="openn">
-					<a href="">OPEN FX ACCOUNT</a>
+					<a href="https://clicks.pipaffiliates.com/c?c=555495&l=en&p=0" target="_blank">OPEN FX ACCOUNT</a>
 				</div>
 			</div>
-			<P class="trading">Trading isn't risky</P>
+			<P class="trading">Open Account Using Affiliate Link <i class="fa fa-arrow-up"></i></P>
 
 			<div class="showcase-img">
 				<img src="forex image.jpeg">
@@ -193,11 +185,28 @@
 		</div>
 
 		<div class="chat-div">
-			<h4>chat up Now!</h4>
-			<span class="whatsapp"><i href="" class="fa fa-whatsapp"></i></span>
-			<span class="telegram"><i href="" class="fa fa-telegram"></i></span>
+			<h4>Live Chat Now!</h4>
+			<span class="whatsapp"><i href="" class="fa fa-whatsapp"></i>
+			<br> <a href="https://mywa.link/jc0y7di0" target="_blank">WhatsApp</a></span>  
+
+			<span class="telegram"><i href="" class="fa fa-telegram"></i><br> <a href="https://t.me/onuegbuemmanuel" target="_blank">Telegram</a></span> 
+			
+			
 		</div>
 	</div>
+
+	<script>
+		function svg(){
+			var menu = document.querySelector('#menu');
+
+			if(menu.style.display ==='block'){
+				menu.style.display = 'none';
+			}
+			else {
+				menu.style.display = 'block';
+			}
+		}
+	</script>
 
 </body>
 </html>
