--- a/fxgoat.html
+++ b/fxgoat.html
@@ -65,7 +65,7 @@
 			</div>
 
 			<div class="section1-inner-div">
-				<i class="fas fa-laptop"></i>
+				<i class="fa fa-laptop"></i>
 				<h6>Best-in-league  <br> resources & tools to  <br> support and guide you in trading the <br> Forex Market</h6>
 			</div>
 	</div>
