added disclaimer and link icon and animations

--- a/fxgoat.html
+++ b/fxgoat.html
@@ -39,7 +39,7 @@
 			<h5>Register & place your first deposit to get 25 USD trading bonus</h5>
 			<div class="open-view">
 				<div class="openn">
-					<a href="https://clicks.pipaffiliates.com/c?c=555495&l=en&p=0" target="_blank">OPEN FX ACCOUNT</a>
+					<a href="https://hotforex.com/hfapp?refid=345152" target="_blank">OPEN FX ACCOUNT</a>
 				</div>
 			</div>
 			<P class="trading">Open Account Using Affiliate Link <i class="fa fa-arrow-up"></i></P>
@@ -65,7 +65,7 @@
 			</div>
 
 			<div class="section1-inner-div">
-				<i class="fas fa-laptop"></i>
+				<i class="fa fa-laptop"></i>
 				<h6>Best-in-league  <br> resources & tools to  <br> support and guide you in trading the <br> Forex Market</h6>
 			</div>
 	</div>
@@ -87,7 +87,7 @@
 				<i href="" class="fa fa-area-chart black"></i>
 				<a href="" class="fa fa-check blue"></a>
 			</div>
-			<h4>TRADING SIGNALS PER MONTH 50$</h4>
+			<h4>TRADING SIGNALS PER MONTH 30$</h4>
 			<h6><em>Use bankwire, credit card or e-wallet to fund your <br> account. No deposit fees!</em></h6>
 		</div>
 
@@ -164,6 +164,10 @@
 			</div>
 		</div>
 
+		<div class="reviews">
+			<h5><span>Review</span> : Before trading, please take into consideration your level of experience, and seek independent financial advice from us. it is the responsibility of Fxgoat to make sure our clients who are willing to learn Forex Trading <a href="#" class="fa fa-bar-chart"></a> through us are well equiped with the full knowledge of trading the Forex Market Profitably.</h5>
+		</div>
+
 		<footer>
 			<p>&copy; All righ reserved 2017 <span>FXgoat Nigeria</span> <br> phone: +234-803-481-7263, <a href="" class="fa fa-envelope gold"></a>   onuegbuemmanuel2@gmail.com</p> 
 		</footer>
@@ -186,14 +190,28 @@
 
 		<div class="chat-div">
 			<h4>Live Chat Now!</h4>
-			<span class="whatsapp"><i href="" class="fa fa-whatsapp"></i>
-			<br> <a href="https://mywa.link/jc0y7di0" target="_blank">WhatsApp</a></span>  
+			<span class="whatsapp"><a href="https://mywa.link/14dwwt33" target="_blank"><i href="" class="fa fa-whatsapp"></i></a>
+			<br> <a href="https://mywa.link/14dwwt33" target="_blank" class="icon-letter">WhatsApp</a></span>  
 
-			<span class="telegram"><i href="" class="fa fa-telegram"></i><br> <a href="https://t.me/onuegbuemmanuel" target="_blank">Telegram</a></span> 
-			
-			
+			<span class="telegram"><a href="https://t.me/EmmanuelFx2" target="_blank"><i href="" class="fa fa-telegram"></i></a><br> <a href="https://t.me/EmmanuelFx2" target="_blank" class="icon-letter">Telegram</a></span> 
+				
 		</div>
 	</div>
+
+
+
+	<footer class="last-footer">
+		<div class="last-footer-link">
+			<a href="#" class="fa fa-facebook"></a>
+			<a href="#" class="fa fa-twitter gap"></a>
+			<a href="#" class="fa fa-linkedin gap"></a>
+			<a href="#" class="fa fa-camera"></a>
+			<i href="#" class="fa fa-telegram"></i>
+		</div>
+
+
+		<p><span class="risk">Risk disclaimer:</span> C F D s are complex instruments and come with a high risk of losing money rapidly due to leverage. You should consider whether you understand how C F D s work and whether you can afford to take the high risk of losing your money. Never deposit more than you are prepared to lose. This information is not directed or intended to lower your confidence in Trading the Forex Market.</p>
+	</footer>
 
 	<script>
 		function svg(){
